WIP :: Separate Private - Public Sceneries
